# livrariaTutorial

./: .gitignore  .pdm-python  db.sqlite3  livraria.json  livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_remove_livro_autor_remove_livro_categoria_and_more.py  0003_livro_autor.py  0004_rename_categoria_categorias.py
livraria/models/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/serializers/: autor.py  categoria.py  editora.py  livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
