[project]
name = "livrariaTutorial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GuilhermeSchreiber7", email = "guilhermeschreieber2007@gmail.com"},
]
dependencies = ["django>=5.2", "djangorestframework>=3.16.0", "django-cors-headers>=4.7.0", "drf-spectacular>=0.28.0", "djangorestframework-simplejwt>=5.5.0", "django-extensions>=4.1", "pydotplus>=2.0.2", "setuptools>=80.3.1", "Pillow>=11.2.1", "python-magic>=0.4.27", "python-dotenv>=1.1.0", "netifaces>=0.11.0", "dj-database-url>=2.3.0", "uvicorn>=0.34.2", "gunicorn>=23.0.0", "whitenoise>=6.9.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]

pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"
test = "python manage.py test"
startapp = "python manage.py startapp {args}"
loaddata = "python manage.py loaddata {args}"
dumpdata = "python manage.py dumpdata {args}"